improve code quality